sidebar: fix subcategory width

In Qt6 the root item of a QQuickWidget no longer persists for the life
time of the widget, unless the root item is created outside the widget.

See https://github.com/qt/qtdeclarative/commit/0d80dbd8c2cfc2a7d2a4d970b7acfc7fb5fb97a0
and https://github.com/qt/qtdeclarative/commit/69d61fecf2deee7510f5f2448614174683744d82
and https://bugreports.qt.io/browse/QTBUG-92820

BUG: 472114
FIXED-IN: 6.0